2006-04-27 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-base.c (rsvg_processing_instruction): Stub out how to handle
	the <?xml-stylesheet?> processing instruction
	
2006-04-25 Dom Lachowicz <cinamod@hotmail.com>	

	* rsvg-image.c: Initialize node->super, to avoid a crash (#339637)
	
2006-04-24 Dom Lachowicz <cinamod@hotmail.com>

	* librsvg.def: Export rsvg_error_get_type() (#339641)
	
2006-04-19 Dom Lachowicz <cinamod@hotmail.com>

	* *.[ch]: Use rsvg_return_if_fail where appropriate, to make life
	easier for language bindings and to report errors more consistently
	(bug #338881)
	
2006-04-17 Sebastian Rittau <srittau@jroger.in-berlin.de>

	* Update API documentation to match deprecated symbol list
	
2006-04-01 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-convert.c: Ditch popt in favor of GOption (#336090)
	* rsvg-convert.c: Ditto
	* test-display.c: Ditto
	* test-performance.c: Ditto
	* configure.in: Ditto, bump version number (2.15.0)
	
2006-03-22 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-base-file-util.c: rsvg_handle_set_base_uri() in rsvg_handle_new_from_file()
	  is too late (#335450)
	
2006-03-19 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-base.c: Fix a crash exposed by bug 335107
	* rsvg-convert: Prevent warnings/crash after getting a null RsvgHandle back
	
2006-03-16 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-convert.c: rsvg-convert 'crashes' because it calls g_error()
	on an error condition, instead of fprintf(stderr, ...) (#334813)
	
==== GNOME 2.14 release ====
	
2006-03-11 Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: 2.14.2. This will go into GNOME 2.14.
	
2006-03-02 Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Depend on newer libcroco for bugfix 333057
	
2006-02-29 Dom Lachowicz <cinamod@hotmail.com>

	* librsvg.def: Fix bug 327855
	
2006-02-28 Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: 2.14.1
	
2006-02-28 Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-structure.c: Make <svg> elements parse style (bug 332700)
	