@@ -1,5 +1,12 @@
 2006-04-27 Dom Lachowicz <cinamod@hotmail.com>
 
+	* rsvg-css.c (rsvg_css_parse_xml_attribute_string): Code borrowed from Expat.
+	Takes a XML attribute+value string and turns it into attribute+value pairs.
+	* rsvg-base.c (rsvg_processing_instruction): Implement <?xml-stylesheet?>
+	as best I know how. (related to #338163)
+	
+2006-04-27 Dom Lachowicz <cinamod@hotmail.com>
+
 	* rsvg-base.c (rsvg_processing_instruction): Stub out how to handle
 	the <?xml-stylesheet?> processing instruction
 	
